# chat-app-backend

./: .env.dev  .gitignore  docker-compose.yml  docker-compose.yml.dev
django/: pyproject.toml
django/chat/: admin.py  apps.py  fields.py  managers.py  models.py  paginations.py  serializers.py  urls.py  views.py
django/chat/migrations/: 0001_initial.py  0002_initial.py  0003_room_avatar_room_title.py
django/config/: asgi.py  settings.py  socketio.py  urls.py
django/main/: fields.py  models.py  paginations.py  serializers.py  urls.py  views.py
django/main/migrations/: 0001_initial.py  0002_user_friend_set.py  0003_user_status.py  0004_user_avatar.py  0005_alter_user_avatar.py  0006_alter_user_avatar.py  0007_alter_user_status.py  0008_alter_user_username.py  0009_alter_user_username.py
docker/django/: Dockerfile
docker/nginx/: django.conf
